--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div id=top></div>
       <div id=hero class=jumbotron>
          <div class=container>
-            <h1 class=hero-title class=load-hidden><span class=text-color-main>Welcome 0xF00D1EEE!!<br>{Country Kitchen}</span></h1>
+            <h1 class=hero-title class=load-hidden><span class=text-color-main>Welcome 0xf00D1EE!!<br>{countryKitchen}</span></h1>
             <h1 class=hero-cta class=load-hidden><span class=dark-blue-text>Your favorite country dishes honored!</span></h1>
             <br><br><br><br>
             <p class=hero-cta class=load-hidden>
