--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
             <br><br><br><br>
             <p class=hero-cta class=load-hidden>
                 <a class="cta-btn cta-btn--hero" href=https://www.instagram.com/country.kitchen/ ><i class="fa fa-instagram fa-inverse"></i> Instagram</a> 
-                <a class="cta-btn cta-btn--hero" href=https://www.youtube.com/channel/UCG4TuVXWsc2VOXAd3JTTv6Q><i class="fa fa-youtube-play fa-inverse"></i> Youtube</a> 
-                <a class="cta-btn cta-btn--hero" href=mailto:yourscountrykitchen@gmail.com ><i class="fa fa-envelope fa-inverse"></i> Mail</a>
+                <a class="cta-btn cta-btn--hero" href=https://www.youtube.com/channel/UCG4TuVXWsc2VOXAd3JTTv6Q><i class="fa fa-youtube-play fa-inverse"></i> Youtube</a>
                 <a class="cta-btn cta-btn--hero" href=https://yourscountrykitchen.business.site/ ><i class="fa fa-google fa-inverse"></i> Google</a>
             </p>
          </div>
@@ -32,7 +31,7 @@
       <div id=bottom></div>
       <footer class="footer navbar-static-bottom">
          <div class=container>
-            <p class=footer__text>© 2022 - Country Kitchen | Ping <a href=https://instagram.com/cold_cache>Admin</a></p>
+            <p class=footer__text>© 2022 - Country Kitchen | Ping <a href=https://instagram.com/cold_cache>Admin</a> | Email <a href=mailto:yourscountrykitchen@gmail.com> Country Kitchen</a></p>
          </div>
       </footer>
       <script src=vendor.0f582e919eacfa434074.bundle.js></script><script src=main.17756a8b8ec2d88ab95b.bundle.js></script>
