--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div id=bottom></div>
       <footer class="footer navbar-static-bottom">
          <div class=container>
-            <p class=footer__text>© 2022 - Country Kitchen | Ping <a href=https://instagram.com/cold_cache>Admin</a> | Email <a href=mailto:yourscountrykitchen@gmail.com> Country Kitchen</a></p>
+            <p class=footer__text>© 2022 - Country Kitchen | Ping <a href=https://instagram.com/cold_cache>Admin</a> | <a href=mailto:yourscountrykitchen@gmail.com>Email</a></p>
          </div>
       </footer>
       <script src=vendor.0f582e919eacfa434074.bundle.js></script><script src=main.17756a8b8ec2d88ab95b.bundle.js></script>
