--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name=viewport content="width=device-width,initial-scale=1">
       <link rel="shortcut icon" type=image/png href=./assets/favicon.png>
       <title>Country Kitchen</title>
-      <meta name=keywords content="maheshpj, pullani, software, engineer, country, kitchen, engineer chef, chef, food blog, blogger">
+      <meta name=keywords content="maheshpj, pullani, software, country, kitchen, engineer, chef, food, blog, blogger">
       <meta name=description content="Your favorite country dishes honored!">
       <link rel=stylesheet href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css>
       <script src=https://unpkg.com/scrollreveal></script><script>ScrollReveal({reset:!1})</script><script async defer=defer src=https://buttons.github.io/buttons.js></script>
@@ -17,8 +17,8 @@
       <div id=top></div>
       <div id=hero class=jumbotron>
          <div class=container>
-            <h1 class=hero-cta class=load-hidden><span class=dark-blue-text>Welcome 0xf00D1EE!!</span></h1>
-            <h1 class=hero-title class=load-hidden><span class=text-color-main>{countryKitchen}</span></h1>
+            <h1 class=hero-cta class=load-hidden><span class=dark-blue-text>Welcome foodie!</span></h1>
+            <h1 class=hero-title class=load-hidden><span class=text-color-main>Country Kitchen</span></h1>
             <h1 class=hero-cta class=load-hidden><span class=dark-blue-text>Your favorite country dishes honored!</span></h1>
             <br><br><br><br>
             <p class=hero-cta class=load-hidden>
